# aegis

./: .dockerignore  .env-example  Containerfile  Containerfile.eval  DEVELOP.md  Makefile  README.md  pyproject.toml
.github/workflows/: evals.yml  gitleaks.yml  tests.yml
.tekton/: aegis-build-pipeline.yaml  aegis-eval-container-pull-request.yaml  aegis-eval-container-push.yaml  aegis-eval-container.yaml  aegis-eval-pull-request.yaml  aegis-eval-push.yaml
docs/: CHANGELOG.md  env-vars.md  openapi.json  openapi.yml
docs/adrs/: 0001-aegis.md
evals/: README.md  conftest.py
evals/features/: common.py
evals/features/cve/: test_cvss_diff.py  test_identify_pii.py  test_rewrite_description.py  test_rewrite_statement.py  test_suggest_cwe.py  test_suggest_impact.py
evals/utils/: osidb_cache.py
scripts/: example_full_rag.py  example_kb.py  example_rag.py  run_web_service.sh
src/aegis/: __init__.py  agents.py  data_models.py  prompt.py
src/aegis/features/: __init__.py  data_models.py  system_prompt.txt
src/aegis/kb/: __init__.py  data_models.py  (+1 more)
src/aegis_ai/: __init__.py  agents.py  data_models.py  prompt.py  toolsets.py
src/aegis_ai_cli/: main.py
src/aegis_ai_ml/: Makefile  README.md
src/aegis_ai_web/: README.md  main.py
src/aegis_chat/: chat_app.py
src/aegis_cli/: __init__.py  main.py
src/aegis_restapi/: README.md  main.py
src/aegis_web/: README.md  main.py
tests/: conftest.py  test_data_models.py  test_features.py  test_prompt.py
tests/eval/: conftest.py  test_agent.py
tests/llm_cache/: test_cvss_diff_explain_with_test_model.json  test_rewrite_statement_with_test_model.json
(+48 files in other folders)
