[project]
name = "aegis"
version = "0.1.0"
description = "Perform security analysis on security artifacts."
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.9",
    "asyncpg>=0.30.0",
    "click>=8.2.1",
    "click-completion>=0.5.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "langchain-text-splitters>=0.3.8",
    "osidb-bindings>=4.10.1",
    "packageurl-python>=0.16.0",
    "pgvector>=0.4.1",
    "pydantic>=2.11.5",
    "pydantic-ai==0.2.18",
    "pydantic-ai-slim[duckduckgo,mcp,tavily]>=0.2.18",
    "pygithub>=2.6.1",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
    "wikipedia>=1.4.0",
]

[project.scripts]
aegis = "aegis_cli.main:aegis_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"
python_files = "test_*.py"

[dependency-groups]
dev = [
    "deepeval>=2.5.5",
    "detect-secrets>=1.5.0",
    "exceptiongroup>=1.3.0",
    "hatchling>=1.27.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "lxml>=5.4.0",
    "mypy>=1.15.0",
    "pydantic-eval>=0.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "pytest-recording>=0.13.4",
    "pytest-spec>=4.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.12",
    "types-requests>=2.32.0.20250515",
]
lint = []
